--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,11 +3,17 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow: hidden;
+}
+
 table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  width: calc(100% - 15px);
   margin: auto;
+  display: block;
+  height: calc(100vh - 4rem - 65px);
+  overflow-y: auto;
 }
 
 td,
@@ -31,6 +37,48 @@ th {
   text-align: left;
   background-color: skyblue;
   font-weight: normal;
+}
+
+.checkboxs {
+  width: 1%;
+}
+
+.name {
+  width: 14%;
+}
+
+.designation {
+  width: 14%;
+}
+
+.company {
+  width: 14%;
+}
+
+.industry {
+  width: 14%;
+}
+
+.email {
+  width: 14%;
+}
+
+.phoneNumber {
+  width: 14%;
+}
+
+.country {
+  width: 14%;
+}
+
+.action {
+  width: 5%;
+}
+
+.action > button {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
 
 header {
@@ -87,3 +135,35 @@ header {
   min-width: 100%;
   max-width: 100%;
 }
+
+.alert {
+  position: absolute;
+  width: 20rem;
+  height: 2.5rem;
+  left: calc(50% - 10rem);
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(79, 229, 79);
+  border-radius: 7px;
+  color: white;
+}
+
+/* 
+.signin {
+  width: 95%;
+  height: 100vh;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
+}
+
+.signin > form {
+  display: flex;
+  height: 15rem;
+  flex-direction: column;
+  justify-content: space-around;
+} */
