--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,9 +3,9 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   overflow: hidden;
-}
+} */
 
 table {
   font-family: Arial, Helvetica, sans-serif;
@@ -82,6 +82,7 @@ th {
 }
 
 header {
+  width: 100%;
   height: 4rem;
   background-color: gainsboro;
   display: flex;
@@ -106,19 +107,13 @@ header {
 }
 
 .hero {
-  width: 85%;
+  width: 100%;
 }
 
 .mainpage {
   width: 100%;
   display: flex;
   justify-content: space-between;
-}
-
-.sidebar {
-  width: 15%;
-  height: calc(100vh - 4rem);
-  background-color: rgb(194, 233, 249);
 }
 
 .popup {
@@ -145,9 +140,82 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(79, 229, 79);
+  background-color: rgb(244, 71, 97);
   border-radius: 7px;
   color: white;
+}
+
+.mailContainer {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+
+.innerContainer {
+  width: calc(100% - 12rem);
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 12rem;
+  height: 100%;
+  background-color: rgb(194, 233, 249);
+}
+
+.asidelogo {
+  font-family: "Titillium Web";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 61px;
+  color: #0884ff;
+  position: relative;
+  left: 10%;
+}
+
+.signOutBtn {
+  position: relative;
+  width: 4rem;
+  cursor: pointer;
+  bottom: 5.6%;
+  left: 10%;
+}
+
+.asidelogo > div {
+  width: 100%;
+  height: 100%;
+  border: 2px solid bal;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sidetop {
+  height: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.sidetop > div {
+  width: 100%;
+  height: 66.66%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.dashbord {
+  width: 6rem;
+  cursor: pointer;
+}
+
+.asideOpenimg {
+  width: 8.5rem;
+  cursor: pointer;
 }
 
 /* 
