--- a/frontend/src/pages/signin.css
+++ b/frontend/src/pages/signin.css
@@ -1,264 +1,69 @@
 .loginContainer {
   width: 100%;
   height: 100vh;
+  position: relative;
   background: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.bigCircleTop {
+.bigCircle {
   position: absolute;
-  height: 200px;
-  width: 200px;
-  left: -45px;
-  top: -44px;
-  border-radius: 100%;
-  background: #b2dfff;
-  transform: rotate(100.53deg);
+  width: 14.75%;
+}
+
+.left {
+  top: 0;
+  left: 0;
+}
+
+.right {
+  right: 0;
+  bottom: 0;
 }
 
 .mainLogIn {
-  position: absolute;
-  width: calc(100% - 180px);
-  height: calc(100% - 160px);
-  left: 90px;
-  top: 80px;
+  position: relative;
+  z-index: 1;
+  width: 81%;
+  height: 71.7%;
+  margin: auto;
   background: #cef3ff;
   opacity: 0.75;
   box-shadow: 0px 4px 22px #b2dfff;
   border-radius: 20px;
-  z-index: 1;
   display: flex;
+  justify-content: center;
   align-items: center;
-}
-
-.dot {
-  position: absolute;
-  width: 13.69px;
-  height: 13.69px;
-  background: rgba(45, 165, 252, 0.5);
-  border-radius: 100%;
-}
-
-.dot1 {
-  right: 180px;
-  top: 140px;
-}
-
-.dot2 {
-  right: 160px;
-  top: 140px;
-}
-
-.dot3 {
-  right: 140px;
-  top: 140px;
-}
-
-.dot4 {
-  right: 120px;
-  top: 140px;
-}
-
-.dot5 {
-  right: 100px;
-  top: 140px;
-}
-
-.dot6 {
-  right: 80px;
-  top: 140px;
-}
-
-.dot7 {
-  right: 60px;
-  top: 140px;
-}
-
-.dot8 {
-  right: 180px;
-  top: 120px;
-}
-
-.dot9 {
-  right: 160px;
-  top: 120px;
-}
-
-.dot10 {
-  right: 140px;
-  top: 120px;
-}
-
-.dot11 {
-  right: 120px;
-  top: 120px;
-}
-
-.dot12 {
-  right: 100px;
-  top: 120px;
-}
-
-.dot13 {
-  right: 80px;
-  top: 120px;
-}
-
-.dot14 {
-  right: 60px;
-  top: 120px;
-}
-
-.dot15 {
-  right: 180px;
-  top: 100px;
-}
-
-.dot16 {
-  right: 160px;
-  top: 100px;
-}
-
-.dot17 {
-  right: 140px;
-  top: 100px;
-}
-
-.dot18 {
-  right: 120px;
-  top: 100px;
-}
-
-.dot19 {
-  right: 100px;
-  top: 100px;
-}
-
-.dot20 {
-  right: 80px;
-  top: 100px;
-}
-
-.dot21 {
-  right: 60px;
-  top: 100px;
-}
-
-.dot22 {
-  right: 180px;
-  top: 80px;
-}
-
-.dot23 {
-  right: 160px;
-  top: 80px;
-}
-
-.dot24 {
-  right: 140px;
-  top: 80px;
-}
-
-.dot25 {
-  right: 120px;
-  top: 80px;
-}
-
-.dot26 {
-  right: 100px;
-  top: 80px;
-}
-
-.dot27 {
-  right: 80px;
-  top: 80px;
-}
-
-.dot28 {
-  right: 60px;
-  top: 80px;
-}
-
-.dot29 {
-  right: 180px;
-  top: 60px;
-}
-
-.dot30 {
-  right: 160px;
-  top: 60px;
-}
-
-.dot31 {
-  right: 140px;
-  top: 60px;
-}
-
-.dot32 {
-  right: 120px;
-  top: 60px;
-}
-
-.dot33 {
-  right: 100px;
-  top: 60px;
-}
-
-.dot34 {
-  right: 80px;
-  top: 60px;
-}
-
-.dot35 {
-  right: 60px;
-  top: 60px;
-}
-
-.dot36 {
-  right: 180px;
-  top: 40px;
-}
-
-.dot37 {
-  right: 160px;
-  top: 40px;
-}
-
-.dot38 {
-  right: 140px;
-  top: 40px;
-}
-
-.dot39 {
-  right: 120px;
-  top: 40px;
-}
-
-.dot40 {
-  right: 100px;
-  top: 40px;
-}
-
-.dot41 {
-  right: 80px;
-  top: 40px;
-}
-
-.dot42 {
-  right: 60px;
-  top: 40px;
 }
 
 .dotLeft {
   position: absolute;
-  right: calc(100% - 250px);
-  top: calc(100vh - 350px);
+  left: 2.86%;
+  bottom: 7.5%;
+  width: 12.72%;
+}
+
+.dotRight {
+  position: absolute;
+  width: 12.72%;
+  top: 5%;
+  right: 4.3%;
+}
+
+.signForm {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 18rem;
+  width: 20rem;
+  justify-content: space-between;
+  text-align: center;
 }
 
 .logo {
-  position: relative;
-  width: 92px;
-  height: 18px;
-  left: calc(50% - 46px);
+  display: flex;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
@@ -268,70 +73,67 @@
   align-items: center;
   letter-spacing: 0.25px;
   color: #7d8cc4;
+  justify-content: center;
 }
 
 .detail {
-  position: relative;
-  width: 328px;
-  height: 22px;
-  left: calc(50% - 164px);
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
   line-height: 22px;
+  display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.25px;
+  justify-content: center;
   color: #000000;
+  opacity: 0.6;
 }
 
-.signForm {
-  height: 25rem;
-  width: 23rem;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.signForm > input,
-button,
-a {
-  height: 45px;
-  /* Colors/Neutral/White */
+.inputauth {
+  height: 35px;
   background: #ffffff;
   border: 1px solid #e2e2e2;
   border-radius: 5px;
   padding: 10px;
 }
 
-.signForm > a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  background: none;
-  outline: none;
+.btn {
+  background: #7d8cc4;
+  border-radius: 5px;
+  height: 40px;
+  cursor: pointer;
   border: none;
-  position: relative;
-  bottom: 20px;
-  font-size: 1.2rem;
-  left: 2.5px;
+  outline: none;
 }
 
-.signForm > button {
-  background-color: #7d8cc4;
+.linkLogin {
+  width: 100%;
+  height: 18px;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.25px;
+  color: #7d8cc4;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.signineye {
+  position: absolute;
+  right: 0.8rem;
+  bottom: 7.1885rem;
   cursor: pointer;
 }
 
-.bigCircleBottom {
+.signupeye {
   position: absolute;
-  width: 200px;
-  height: 200px;
-  right: -45px;
-  bottom: -44px;
-  border-radius: 100%;
-  background: #b2dfff;
-  transform: rotate(100.53deg);
+  right: 0.8rem;
+  bottom: 7.85rem;
+  cursor: pointer;
 }
