--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -339,3 +339,40 @@ header {
   width: 8rem;
   cursor: pointer;
 }
+
+/* ---------------mobile------------------- */
+.app {
+  width: 100%;
+  height: 100vh;
+  display: none;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  color: white;
+  background-color: black;
+  font-size: 2rem;
+}
+
+.app {
+  text-align: center;
+}
+
+.app > button {
+  width: 80%;
+  height: 5rem;
+  background-color: skyblue;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  font-size: 1.5rem;
+}
+
+@media screen and (max-width: 900px) {
+  .mailContainer {
+    display: none;
+  }
+
+  .app {
+    display: flex;
+  }
+}
