--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,7 +13,7 @@ table {
   border-collapse: collapse;
   margin: auto;
   display: block;
-  height: calc(100vh - 4rem - 65px);
+  height: calc(100vh - 4rem - 3rem - 65px);
   overflow-y: auto;
   border-radius: 10px;
 }
@@ -25,12 +25,18 @@ th {
   padding: 8px;
 }
 
+th {
+  position: sticky;
+  top: -3px;
+}
+
 tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: rgba(178, 223, 255, 0.31);
+  border-radius: 10px;
 }
 
 tr:hover {
-  background-color: #ddd;
+  background-color: paleturquoise;
 }
 
 th {
@@ -169,7 +175,6 @@ header {
 
 .filter > img {
   height: 100%;
-  cursor: pointer;
 }
 
 .filter > div {
@@ -345,6 +350,18 @@ header {
 .asideOpenimg {
   width: 8rem;
   cursor: pointer;
+}
+
+footer {
+  height: 3rem;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+footer > img {
+  width: 7.5%;
 }
 
 /* ---------------mobile------------------- */
